--- a/app/src/main/res/layout/lists_of_restaurant.xml
+++ b/app/src/main/res/layout/lists_of_restaurant.xml
@@ -2,7 +2,8 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="120dp"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="5dp"
     android:layout_marginHorizontal="5dp"
     android:layout_marginBottom="20dp"
     app:cardCornerRadius="25dp"
@@ -10,6 +11,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
+        android:paddingVertical="20dp"
         android:layout_height="match_parent">
 
         <de.hdodenhof.circleimageview.CircleImageView
@@ -17,6 +19,7 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_marginStart="20dp"
+            android:scaleType="centerCrop"
             android:layout_marginLeft="20dp"
             android:src="@drawable/sample_rlogo"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -25,40 +28,47 @@
 
         <TextView
             android:id="@+id/restaurantName"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
+            android:textAlignment="center"
             android:layout_height="wrap_content"
             android:text="Golden Baboy"
+            android:layout_marginHorizontal="20dp"
             android:fontFamily="@font/montserrat"
             android:textStyle="bold"
             android:textColor="@color/black"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/restaurantImage"
-            app:layout_constraintTop_toTopOf="@+id/restaurantImage" />
+            app:layout_constraintTop_toTopOf="@+id/restaurantImage"
+            android:gravity="center_horizontal" />
 
         <TextView
             android:id="@+id/restaurantAddress"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textStyle="bold"
+            android:textAlignment="center"
             android:textSize="14sp"
             android:textColor="@color/restaurantAddressTextColor"
             android:text="Morayta, Metro manila"
             app:layout_constraintEnd_toEndOf="@+id/restaurantName"
             app:layout_constraintStart_toStartOf="@+id/restaurantName"
-            app:layout_constraintTop_toBottomOf="@+id/restaurantName" />
+            app:layout_constraintTop_toBottomOf="@+id/restaurantName"
+            android:gravity="center_horizontal" />
 
         <TextView
             android:id="@+id/restaurantSchedule"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat"
-            android:layout_marginTop="10dp"
+            android:textAlignment="center"
+            android:layout_marginTop="3dp"
             android:textColor="@color/restaurantOpeningTextColor"
             android:text="Open today until 10:00 pm"
             app:layout_constraintEnd_toEndOf="@+id/restaurantAddress"
             app:layout_constraintStart_toStartOf="@+id/restaurantAddress"
-            app:layout_constraintTop_toBottomOf="@+id/restaurantAddress" />
+            app:layout_constraintTop_toBottomOf="@+id/restaurantAddress"
+            android:gravity="center_horizontal" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
