--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -75,6 +75,7 @@
             app:layout_constraintTop_toBottomOf="@+id/toolbar2">
 
             <ImageView
+                android:id="@+id/ivAccountImageOuter"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
                 android:alpha="0.3"
@@ -88,7 +89,7 @@
 
 
             <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/circleImageView2"
+                android:id="@+id/ivAccountImageInner"
                 android:layout_width="170dp"
                 android:layout_height="170dp"
                 android:layout_marginTop="20dp"
@@ -109,12 +110,12 @@
                 android:text="Edit Image"
                 android:textColor="@color/loginColor"
                 android:textSize="12sp"
-                app:layout_constraintEnd_toEndOf="@+id/circleImageView2"
-                app:layout_constraintStart_toStartOf="@+id/circleImageView2"
-                app:layout_constraintTop_toBottomOf="@+id/circleImageView2" />
+                app:layout_constraintEnd_toEndOf="@+id/ivAccountImageInner"
+                app:layout_constraintStart_toStartOf="@+id/ivAccountImageInner"
+                app:layout_constraintTop_toBottomOf="@+id/ivAccountImageInner" />
 
             <TextView
-                android:id="@+id/textView11"
+                android:id="@+id/tvHeaderAccountName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -143,7 +144,7 @@
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />
 
         <TextView
-            android:id="@+id/textView14"
+            android:id="@+id/tvAccountName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat"
@@ -156,14 +157,14 @@
             android:id="@+id/textView15"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/edit_rounded"
             android:layout_marginLeft="10dp"
+            android:background="@drawable/edit_rounded"
             android:drawableLeft="@drawable/ic_outline_edit_24_2"
             android:paddingHorizontal="1dp"
             android:paddingVertical="1dp"
-            app:layout_constraintBottom_toBottomOf="@+id/textView14"
-            app:layout_constraintStart_toEndOf="@+id/textView14"
-            app:layout_constraintTop_toTopOf="@+id/textView14" />
+            app:layout_constraintBottom_toBottomOf="@+id/tvAccountName"
+            app:layout_constraintStart_toEndOf="@+id/tvAccountName"
+            app:layout_constraintTop_toTopOf="@+id/tvAccountName" />
 
         <View
             android:id="@+id/view2"
@@ -174,14 +175,14 @@
             android:background="@color/starColorNotActive"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView14" />
+            app:layout_constraintTop_toBottomOf="@+id/tvAccountName" />
 
 
         <!--EMAIL ADDRES-->
 
         <TextView
             android:id="@+id/textView132"
-            android:layout_width="125dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:fontFamily="@font/montserrat"
@@ -190,44 +191,66 @@
             app:layout_constraintStart_toStartOf="@+id/view2"
             app:layout_constraintTop_toBottomOf="@+id/view2" />
 
+        <ImageView
+            android:id="@+id/ivEmailAddressStatus"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/ic_verified"
+            app:layout_constraintBottom_toBottomOf="@+id/textView132"
+            app:layout_constraintEnd_toStartOf="@+id/tvEmailAddressStatus"
+            app:layout_constraintTop_toTopOf="@+id/textView132" />
+
         <TextView
-            android:id="@+id/textView142"
+            android:id="@+id/tvEmailAddressStatus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat"
+            android:text="Verified"
+            android:textColor="@color/restaurantOpeningTextColor"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="@+id/ivEmailAddressStatus"
+            app:layout_constraintEnd_toEndOf="@+id/view2"
+            app:layout_constraintTop_toTopOf="@+id/ivEmailAddressStatus" />
+
+        <TextView
+            android:id="@+id/tvAccountEmailAddress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat"
             android:text="ajajcandelarai@gmail.com"
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="@+id/textView132"
-            app:layout_constraintTop_toBottomOf="@+id/textView132" />
+            app:layout_constraintTop_toBottomOf="@+id/ivEmailAddressStatus" />
 
         <TextView
             android:id="@+id/textView152"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:background="@drawable/edit_rounded"
             android:drawableLeft="@drawable/ic_outline_edit_24_2"
-            android:layout_marginLeft="10dp"
             android:paddingHorizontal="1dp"
             android:paddingVertical="1dp"
-            app:layout_constraintBottom_toBottomOf="@+id/textView142"
-            app:layout_constraintStart_toEndOf="@+id/textView142"
-            app:layout_constraintTop_toTopOf="@+id/textView142" />
+            app:layout_constraintBottom_toBottomOf="@+id/tvAccountEmailAddress"
+            app:layout_constraintStart_toEndOf="@+id/tvAccountEmailAddress"
+            app:layout_constraintTop_toTopOf="@+id/tvAccountEmailAddress" />
+
         <View
             android:id="@+id/view3"
             android:layout_width="0dp"
             android:layout_height="1dp"
-            android:layout_marginTop="15dp"
             android:layout_marginHorizontal="30dp"
+            android:layout_marginTop="15dp"
             android:background="@color/starColorNotActive"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView142" />
+            app:layout_constraintTop_toBottomOf="@+id/tvAccountEmailAddress" />
 
 
         <!--CONTACT NUMBER-->
         <TextView
             android:id="@+id/textView133"
-            android:layout_width="125dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:fontFamily="@font/montserrat"
@@ -237,43 +260,43 @@
             app:layout_constraintTop_toBottomOf="@+id/view3" />
 
         <TextView
-            android:id="@+id/textView143"
+            android:id="@+id/tvAccountContactNumber"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat"
             android:text="09123456789"
             android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="@+id/textView133"
-            app:layout_constraintTop_toBottomOf="@+id/textView133" />
+            app:layout_constraintTop_toBottomOf="@+id/ivContactNumberStatus" />
 
         <TextView
             android:id="@+id/textView153"
             android:layout_width="wrap_content"
-            android:layout_marginLeft="10dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:background="@drawable/edit_rounded"
             android:drawableLeft="@drawable/ic_outline_edit_24_2"
             android:paddingHorizontal="1dp"
             android:paddingVertical="1dp"
-            app:layout_constraintBottom_toBottomOf="@+id/textView143"
-            app:layout_constraintStart_toEndOf="@+id/textView143"
-            app:layout_constraintTop_toTopOf="@+id/textView143"
+            app:layout_constraintBottom_toBottomOf="@+id/tvAccountContactNumber"
+            app:layout_constraintStart_toEndOf="@+id/tvAccountContactNumber"
+            app:layout_constraintTop_toTopOf="@+id/tvAccountContactNumber"
             app:layout_constraintVertical_bias="1.0" />
 
         <View
             android:id="@+id/view4"
             android:layout_width="0dp"
             android:layout_height="1dp"
-            android:layout_marginTop="15dp"
             android:layout_marginHorizontal="30dp"
+            android:layout_marginTop="15dp"
             android:background="@color/starColorNotActive"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView143" />
+            app:layout_constraintTop_toBottomOf="@+id/tvAccountContactNumber" />
 
         <!--PASSWORD-->
         <TextView
-            android:id="@+id/textView144"
+            android:id="@+id/tvAccountPassword"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:fontFamily="@font/montserrat"
@@ -286,7 +309,7 @@
 
         <TextView
             android:id="@+id/textView134"
-            android:layout_width="125dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:fontFamily="@font/montserrat"
@@ -299,29 +322,50 @@
             android:id="@+id/textView154"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:background="@drawable/edit_rounded"
             android:drawableLeft="@drawable/ic_outline_edit_24_2"
             android:inputType="textPassword"
-            android:layout_marginLeft="10dp"
             android:paddingHorizontal="1dp"
             android:paddingVertical="1dp"
-            app:layout_constraintBottom_toBottomOf="@+id/textView144"
-            app:layout_constraintStart_toEndOf="@+id/textView144"
-            app:layout_constraintTop_toTopOf="@+id/textView144" />
+            app:layout_constraintBottom_toBottomOf="@+id/tvAccountPassword"
+            app:layout_constraintStart_toEndOf="@+id/tvAccountPassword"
+            app:layout_constraintTop_toTopOf="@+id/tvAccountPassword" />
 
         <View
             android:id="@+id/view5"
             android:layout_width="0dp"
             android:layout_height="1dp"
-            android:layout_marginTop="15dp"
             android:layout_marginHorizontal="30dp"
+            android:layout_marginTop="15dp"
             android:background="@color/starColorNotActive"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView144" />
+            app:layout_constraintTop_toBottomOf="@+id/tvAccountPassword" />
+
+        <ImageView
+            android:id="@+id/ivContactNumberStatus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_not_verified"
+            app:layout_constraintBottom_toBottomOf="@+id/textView133"
+            app:layout_constraintEnd_toStartOf="@+id/tvContactNumberStatus"
+            app:layout_constraintTop_toTopOf="@+id/textView133" />
+
+        <TextView
+            android:id="@+id/tvContactNumberStatus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat"
+            android:text="Not Verified"
+            android:textColor="@color/menuTextColor"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="@+id/ivContactNumberStatus"
+            app:layout_constraintEnd_toEndOf="@+id/view3"
+            app:layout_constraintTop_toTopOf="@+id/ivContactNumberStatus" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 
 </androidx.core.widget.NestedScrollView>
