--- a/app/src/main/res/layout/lists_of_particular_promos.xml
+++ b/app/src/main/res/layout/lists_of_particular_promos.xml
@@ -2,15 +2,51 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginTop="5dp"
-    android:layout_height="wrap_content">
+    android:paddingBottom="20dp">
 
-    <ImageView
-        android:id="@+id/imageView8"
+    <TextView
+        android:id="@+id/tvPromoName"
         android:layout_width="0dp"
+        android:textAlignment="center"
+        android:layout_marginHorizontal="20dp"
         android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:text="Everything Opening Promo"
+        android:layout_marginTop="30dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:gravity="center_horizontal" />
+
+    <ImageView
+        android:id="@+id/ivPromoImage"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:scaleType="fitXY"
+        android:adjustViewBounds="true"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvPromoName"
         app:srcCompat="@drawable/sample_promo_image" />
+
+    <Button
+        android:id="@+id/btnPromoDetails"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/montserrat"
+        android:text="View More Details"
+        android:textAllCaps="false"
+        app:backgroundTint="#D8345F"
+        app:layout_constraintEnd_toEndOf="@+id/ivPromoImage"
+        app:layout_constraintStart_toStartOf="@+id/ivPromoImage"
+        app:layout_constraintTop_toBottomOf="@+id/ivPromoImage" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
